- new "run-tests-server" target that runs a standalone server that   automatic tests can run against.   It uses the same red5 server that the junit tests use, not your dist   directory.